@@ -1,3 +1,10 @@
+2004-01-09  David Gravereaux <davygrvy@pobox.com>
+
+	* generic/tcl.h: Renamed and deprecated #defines moved to within
+	the #ifndef TCL_NO_DEPRECATED block.  This allows us to build Tcl
+	to check for deprecated functions in use, such as panic() and
+	Tcl_Ckalloc().  By request from DKF.
+
 2004-01-09  Vince Darley  <vincentdarley@users.sourceforge.net>
 
 	* generic/tclIOUtil.c: fix to infinite loop in 
